--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,34 @@
-body {
-    background-color: beige;
-    margin: 0;
-}
-.popUp{
-    display: none;
-    width: 100%;
-}
-iframe {
-    border: 0;
-}
-
-a:hover + .popUp,.popUp:hover{
-    display: flex;
-    position: relative;
-    z-index: 100;
-}
-#about {
-    margin: 50px 100px 50px 100px;
-}
-
 header {
     min-height:50px; 
     background:gray;
     width: 100%;
     position: sticky; top: 0;
+    display: flex;
+    justify-content: space-between;
 }
-footer {
-    min-height:50px; 
-    background: gray;
-    width: 100%;
-    position: sticky; bottom: 0;
-} 
-#Projects {
+#header {
+    display: flex;
+    margin-left: 50px;
+    align-self: center;
+}
+#links {
+    display: flex;
+    list-style: none;
+    align-self: center;
+    justify-content: space-between;
+    padding: 0;
+    gap: 15px;
+    margin-right: 50px;
+}
+#about {
+    margin: 50px 100px 50px 100px;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,3 +37,23 @@ footer {
     display: flex;
     align-items: center;
 }
+footer {
+    min-height:50px; 
+    background: gray;
+    width: 100%;
+    position: sticky; bottom: 0;
+} 
+
+
+/* .popUp{
+    display: none;
+    width: 100%;
+} 
+iframe {
+    border: 0;
+} 
+a:hover + .popUp,.popUp:hover{
+    display: flex;
+    position: relative;
+    z-index: 100;
+} */
