--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-header {
-    min-height:50px; 
-    background:gray;
-    width: 100%;
-    position: sticky; top: 0;
-    display: flex;
-    justify-content: space-between;
-}
 #header {
     display: flex;
     margin-left: 50px;
@@ -27,6 +19,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    background-image: url('https://img.freepik.com/free-vector/stylish-hexagonal-line-pattern-background_1017-19742.jpg');
 }
 h2 {
     display: flex;
@@ -37,12 +31,29 @@ h2 {
     display: flex;
     align-items: center;
 }
+.textDescription {
+    width: 500px;
+    height: 100px;
+    background-color: red;
+    align-items: center;
+}
 footer {
-    min-height:50px; 
-    background: gray;
-    width: 100%;
     position: sticky; bottom: 0;
+    justify-content: center;
+    align-items: center;
 } 
+header {
+    position: sticky; top: 0;
+    justify-content: space-between;
+}
+footer, header {
+    min-height:50px; 
+    display: flex;
+    width: 100%;
+    background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png');
+    color: white;
+    font-size: large;
+}
 
 
 /* .popUp{
