--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #header {
     display: flex;
-    margin-left: 50px;
     align-self: center;
+    margin-left: 50px;
 }
 #links {
     display: flex;
@@ -11,9 +11,6 @@
     padding: 0;
     gap: 15px;
     margin-right: 50px;
-}
-#about {
-    margin: 50px 100px 50px 100px;
 }
 body {
     display: flex;
@@ -27,9 +24,14 @@ h2 {
     flex-direction: column;
     align-items: center;
 }
+#Projects, #about, #socials {
+    min-width: 700px;
+    max-width: 1000px;
+}
 .RPS, .EAS, .CALC {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .textDescription {
     width: 500px;
