--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
     gap: 15px;
     margin-right: 50px;
 }
+a {
+    color: white;
+    text-decoration: none;
+}
 body {
     display: flex;
     flex-direction: column;
