--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    background-image: url('https://img.freepik.com/free-vector/stylish-hexagonal-line-pattern-background_1017-19742.jpg');
+    background-image: url('https://files.1-background.com/images/silk/white-silk-fabric-website-background.jpg');
 }
 h2 {
     display: flex;
@@ -29,8 +29,8 @@ h2 {
     align-items: center;
 }
 #Projects, #about, #socials {
-    min-width: 700px;
-    max-width: 1000px;
+    min-width: 500px;
+    max-width: 800px;
 }
 .RPS, .EAS, .CALC {
     display: flex;
@@ -42,6 +42,10 @@ h2 {
     height: 100px;
     background-color: red;
     align-items: center;
+}
+.RPS .textDescription {
+    width: 400px;
+    height: 100px;
 }
 footer {
     position: sticky; bottom: 0;
@@ -59,6 +63,11 @@ footer, header {
     background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png');
     color: white;
     font-size: large;
+}
+#socials {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 
